--- a/src/app/staff-invoice-list/staff-invoice-list.component.html
+++ b/src/app/staff-invoice-list/staff-invoice-list.component.html
@@ -1,3 +1,39 @@
 <div>
-  sdfgsdfg
-</div>
+    <br>
+    <mat-card>
+      <br><br>
+      <mat-divider></mat-divider>
+      <br>
+      <table mat-table [dataSource]="invoices">
+        <ng-container matColumnDef="transactionId">
+          <th mat-header-cell *matHeaderCellDef>Transaction Id</th>
+          <td mat-cell *matCellDef="let element">{{element.transactionId}}</td>
+        </ng-container>
+  
+        <ng-container matColumnDef="customerId">
+            <th mat-header-cell *matHeaderCellDef>Customer Id</th>
+            <td mat-cell *matCellDef="let element">{{ element.customerId }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="customerName">
+              <th mat-header-cell *matHeaderCellDef>Customer Name</th>
+              <td mat-cell *matCellDef="let element">{{ element.customerName }}</td>
+            </ng-container>
+  
+          <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef>Date</th>
+              <td mat-cell *matCellDef="let element">{{ element.transactionDate }}</td>
+          </ng-container>
+  
+          <ng-container matColumnDef="send">
+              <th mat-header-cell *matHeaderCellDef class="mat-column-right"></th>
+              <td mat-cell *matCellDef="let element" class="mat-column-right">
+                <button mat-button (click)="sendInvoice(element._id)">Send</button>
+              </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </mat-card>
+  </div>
