--- a/src/app/staff-invoice-view/staff-invoice-view.component.html
+++ b/src/app/staff-invoice-view/staff-invoice-view.component.html
@@ -49,5 +49,5 @@
     </table>
   </div> <br><br><br>
   <button mat-raised-button color="primary" routerLink="/invoices">Back</button>
-  <button mat-raised-button color="primary" style="float: right" (click)="saveInvoice(id)">Save</button>
+  <button mat-raised-button color="primary" style="float: right" (click)="saveInvoice()">Save</button>
 </div>
