--- a/src/app/staff-invoice-list/staff-invoice-list.component.html
+++ b/src/app/staff-invoice-list/staff-invoice-list.component.html
@@ -3,6 +3,12 @@
     <mat-card>
       <br><br>
       <mat-divider></mat-divider>
+        <div class="center-heading form-group">
+          <h1>Invoices Ready For Confirmation</h1>
+          <input [(ngModel)]="searchBox" type="text" placeholder="Search...">
+          <button (click)="fetchInvoicesWithFilter(searchBox)" [disabled]="!searchBox">Go</button>
+          <br>
+        </div>
       <br>
       <table mat-table [dataSource]="invoices">
         <ng-container matColumnDef="transactionId">
@@ -22,7 +28,7 @@
   
           <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef>Date</th>
-              <td mat-cell *matCellDef="let element">{{ element.transactionDate }}</td>
+              <td mat-cell *matCellDef="let element">{{ formatDate(element.transactionDate) }}</td>
           </ng-container>
   
           <ng-container matColumnDef="send">
@@ -36,4 +42,4 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </mat-card>
-  </div>
+  </div> 
