--- a/src/app/customer-invoice-view/customer-invoice-view.component.html
+++ b/src/app/customer-invoice-view/customer-invoice-view.component.html
@@ -7,7 +7,7 @@
         </tr>
         <tr>
           <td style="text-align: center">{{ invoice.transactionId }}</td>
-          <td style="text-align: center">{{ invoice.transactionDate }}</td>
+          <td style="text-align: center">{{ formatDate(invoice.transactionDate) }}</td>
         </tr>
       </table>
     <div class="addresses">
