--- a/src/app/staff-invoice-list/staff-invoice-list.component.html
+++ b/src/app/staff-invoice-list/staff-invoice-list.component.html
@@ -5,8 +5,8 @@
       <mat-divider></mat-divider>
         <div class="center-heading form-group">
           <h1>Invoices Ready For Confirmation</h1>
-          <input [(ngModel)]="searchBox" type="text" placeholder="Search...">
-          <button (click)="fetchInvoicesWithFilter(searchBox)" [disabled]="!searchBox">Go</button>
+          <input class="search-box"[(ngModel)]="searchBox" type="text" placeholder="Search...">
+          <button class="search-button" (click)="fetchInvoicesWithFilter(searchBox)" [disabled]="!searchBox">Go</button>
           <br>
         </div>
       <br>
