--- a/src/app/customer-invoice-view/customer-invoice-view.component.html
+++ b/src/app/customer-invoice-view/customer-invoice-view.component.html
@@ -21,7 +21,7 @@
         {{invoice.customerStreetAddress}}<br>
         {{invoice.city}}<br>
         {{invoice.countyOrState}}<br>
-        {{invoice.postCode}}<br>
+        {{invoice.postcode}}<br>
         {{invoice.phone}}<br>
         {{invoice.email}}<br>
       </address>
