--- a/src/app/staff-invoice-list/staff-invoice-list.component.html
+++ b/src/app/staff-invoice-list/staff-invoice-list.component.html
@@ -6,7 +6,7 @@
         <div class="center-heading form-group">
           <h1>Invoices Ready For Confirmation</h1>
           <input class="search-box" [(ngModel)]="searchBox" type="text" placeholder="Search...">
-          <button class="search-button" (click)="fetchInvoicesWithFilter(searchBox)" [disabled]="!searchBox">Go</button>
+          <button class="search-button" (click)="fetchInvoicesWithFilter()" [disabled]="!searchBox">Go</button>
           <br>
         </div>
       <br>
